[package]
name = "git-ignore"
version = "0.1.0"
authors = ["janniks <jannik.siebert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.2", features = ["https-native", "json-using-serde"] }
itertools = "0.9.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
sublime_fuzzy = "0.6.0"
termion = "1.5"
