[package]
name = "git-ignore"
version = "0.1.0"
authors = ["janniks <jannik@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
minreq = { version = "2.2", features = ["https-native", "json-using-serde"] }
itertools = "0.9.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
sublime_fuzzy = "0.6.0"
