[package]
name = "git-ignore"
version = "0.2.0"
authors = ["janniks <jannik@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
minreq = { version = "2.4.2", features = ["https-native", "json-using-serde"] }
itertools = "0.10.3"
regex = "1.5.4"
serde = { version = "1.0.131", features = ["derive"] }
sublime_fuzzy = "0.7.0"
